дашборд на Bubble Tea
